updates with disabled tests