@@ -46,8 +46,8 @@
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.utils=ALL-UNNAMED
-      --add-exports io.clientcore.annotation.processor.test/io.clientcore.annotation.processor.test.shared=ALL-UNNAMED
-      --add-opens io.clientcore.annotation.processor.test/io.clientcore.annotation.processor.test.shared=ALL-UNNAMED
+      -add-opens annotation.processor.test/io.clientcore.anntation.processor.test.shared=ALL-UNNAMED
+      --add-exports annotation.processor.test/io.clientcore.anntation.processor.test.shared=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
 
@@ -248,4 +248,37 @@
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>java12-plus</id>
+      <activation>
+        <jdk>[12,)</jdk>
+      </activation>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.13.0</version> <!-- {x-version-update;org.apache.maven.plugins:maven-compiler-plugin;external_dependency} -->
+            <executions>
+              <execution>
+                <id>java12-plus-mr</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <release>12</release>
+                  <compileSourceRoots>
+                    <compileSourceRoot>${project.basedir}/src/main/java12</compileSourceRoot>
+                  </compileSourceRoots>
+                  <multiReleaseOutput>true</multiReleaseOutput>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
